[gd_scene load_steps=2 format=3 uid="uid://1fpjstc8tnle"]

[ext_resource type="Script" path="res://src/scenes/scoreboard.gd" id="1_mksbm"]

[node name="Scoreboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mksbm")

[node name="SuccessPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 52.0
offset_top = 47.0
offset_right = -52.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2

[node name="YouWonLabel" type="Label" parent="SuccessPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -228.0
offset_top = 59.0
offset_right = 228.0
offset_bottom = 126.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "YOU WON!"
horizontal_alignment = 1

[node name="GamePlayTimeLabel" type="Label" parent="SuccessPanel"]
layout_mode = 2
offset_left = 337.0
offset_top = 163.0
offset_right = 839.0
offset_bottom = 186.0
text = "GAME COMPLETED IN 0 MINUTES AND 0 SECONDS"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SuccessPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -219.0
offset_top = -52.0
offset_right = 219.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuitButton" type="Button" parent="SuccessPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "QUIT"

[connection signal="button_up" from="SuccessPanel/VBoxContainer/QuitButton" to="." method="_on_quit_button_button_up"]
